--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/frontend/renderer.js"></script>
-  </body>
+<html style="height: 100%;width: 100%; margin: 0px;">
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Hello World!</title>
+</head>
+
+<body style="height: 90%;width: 90%; margin: 0px;">
+  <div id="app"></div>
+  <script type="module" src="/src/frontend/renderer.js"></script>
+</body>
+
 </html>
